# Web-Scraper-UniSER

./: .env  README.md  pyproject.toml
db/: dbconnection.py
